# TaiJianICU

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  DESIGN_V2.md  Dockerfile  README.md  ROADMAP_REVIVAL.md  ROADMAP_V2.md  intervention.py  orchestrator.py  pyproject.toml  render.yaml
.github/workflows/: release-standalone.yml  windows-standalone.yml
.omx/context/: author-revival-20260430T140743Z.md
.omx/plans/: prd-author-revival.md  test-spec-author-revival.md
cli/: __init__.py  benchmark_cmd.py  inspect_cmd.py  intervene_cmd.py  main.py  run_cmd.py  standalone_cmd.py  web_cmd.py
config/: __init__.py  settings.py
core/: __init__.py  inspection.py
docs/: README.md  author-revival-engine-design.md  revival-validation-status.md  standalone-windows.md
pipeline/: __init__.py  revival.py
scripts/: build-standalone.ps1  build_standalone.py  standalone_entry.py
tests/: test_benchmark_runner.py  test_candidate_ranker.py  test_chapter_generator.py  test_clean_prose_gate.py  test_cli.py  test_consistency_checker.py  test_debate_graph.py  test_inspection.py  test_lorebook_reference.py  test_multi_chapter_benchmark.py  test_novel_indexer.py  test_orchestrator.py  test_planning_services.py  test_reflection_updater.py  test_revival_models.py  test_revival_services.py  test_session_store.py  test_standalone_cmd.py  test_style_analyzer.py  test_style_sampler.py  test_usage_summary.py  test_v2_models.py  test_web_app.py  test_web_manager.py  test_world_builder.py
webapp/: __init__.py  app.py  builtin_examples.py  errors.py  manager.py  models.py
(+87 files in other folders)
